--- a/code/style.css
+++ b/code/style.css
@@ -3,213 +3,265 @@ html {
   color: black;
   .webkit-text-size-adjust: 100%;
 
-  * {
+  *:after,
+  *:before {
     box-sizing: border-box;
-    margin: 0;
   }
+}
 
-  body {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
 
-  .header {
-    background-color: #4f7942;
-    color: fff;
-    text-align: center;
-    padding: 10px;
-  }
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin: 5px;
+  padding: 0;
+}
 
-  .container {
-    max-width: 1600px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+.header {
+  background-color: #4f7942;
+  color: fff;
+  text-align: center;
+  padding: 10px;
+}
 
+.logo {
+  width: 50px;
+  height: auto;
+  margin-left: 20px;
+}
+
+.site-info {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.site-info span {
+  margin-left: 10px;
+  font-weight: bold;
+  font-size: 1.2em;
+}
+
+.navbar {
+  display: flex;
+  align-items: center;
+  background-color: #4f7942;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
+.nav-links {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.nav-link {
+  margin-bottom: 10px;
+  text-decoration: none;
+  color: #fff;
+}
+
+.nav-links a {
+  display: block;
+  overflow: hidden;
+  color: #f2f2f2;
+  font-size: 1rem;
+  padding: 20px 30px;
+  text-decoration: none;
+}
+
+.nav-links a:hover {
+  background-color: #9acd32;
+  color: black;
+}
+
+/* Style the the big news from here */
+
+.main-news-container {
+  max-width: 100%;
+  padding: 20px;
+}
+
+.main-news {
+  position: relative;
+  display: inline-block;
+  flex-direction: column;
+  width: 100%;
+  padding: 10px;
+  background-color: #8FBC8F;
+  grid-template-columns: 1fr 2fr;
+  margin-bottom: 20px;
+}
+
+.main-news img {
+  display: block;
+  width: 100%;
+  height: auto;
+  margin-right: 0;
+  object-fit: cover;
+}
+
+.main-news-text {
+  position: absolute;
+  top: 30%;
+  left: 20%;
+  right: 20%;
+  transform: translate (-50%, -50%);
+  background-color: rgba(143, 188, 143, 0.8);
+  color: #fff;
+  padding: 10px 20px;
+  font-size: 20px;
+  text-align: center;
+}
+
+.main-news-text h2 {
+  margin-top: 0;
+  font-size: 24px;
+}
+
+.main-news-text p {
+  /* Limit the width of the text*/
+  margin: 0 auto;
+  text-align: left;
+}
+
+.main-news .read-more {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+  background-color: #4f7942;
+  padding: 10px;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.main-news .read-more:hover {
+  background-color: #9acd32;
+}
+
+.main-news .read-more:hover a {
+  color: #4f7942;
+}
+
+/* News container style */
+
+.news-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+  margin: 10px;
+}
+
+.news-item {
+  box-sizing: border-box;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  background-color: #8FBC8F;
+  display: grid;
+  gap: 20px;
+  color: gray;
+}
+
+
+.news-item img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.news-container a:hover {
+  padding: 10px;
+}
+
+/* Here we play with the footer */
+article {
+  margin: 0 auto;
+  text-align: center;
+  background-color: #d8e4bc;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.article ol,
+article ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.article img {
+  width: 10px;
+  height: auto;
+  margin-left: 5px;
+}
+
+footer {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+  background-color: #4f7942;
+  color: #fff;
+}
+
+/*media queries for responsiveness*/
+@media only screen and (max-width: 767px) {
+
+  /* Mobile syles - column */
   .logo {
-    width: 50px;
-    height: auto;
-  }
-
-  .site-info {
-    display: flex;
-    align-items: center;
+    display: none;
   }
 
   .site-info span {
-    margin-left: 10px;
-    font-weight: bold;
-    font-size: 1.2em;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .navbar {
-    display: flex;
-    justify-content: space-between;
-    background-color: #4f7942;
-    padding: 10px;
-    margin-bottom: 20px;
+    flex-direction: row;
   }
 
   .nav-links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
+    flex-direction: column;
+  }
 
+  .main-news-text {
+    padding: 10px;
+    font-size: 10px;
+  }
+
+  .main-news-text h2 {
+    font-size: 10px;
+  }
+
+  .main-news p {
+    display: none;
+  }
+
+  .main-news .read-more {
+    padding: 8px;
+  }
+
+  .news-container {
+    grid-template-columns: 1fr;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+
+  /* Tablet syles - 2 columns */
+
+  .navbar {
+    flex-direction: column;
+  }
+
+  .news-container {
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .nav-link {
     margin-right: 20px;
-    text-decoration: none;
-    color: fff;
+    margin-bottom: 0;
   }
-
-  .nav-links a {
-    display: block;
-    color: #f2f2f2;
-    padding: 20px 30px;
-    text-decoration: none;
-  }
-
-  .nav-links a:hover {
-    background-color: #9acd32;
-    color: black;
-  }
-
-  /* Style the the big news from here */
-
-  .main-news container {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-gap: 20px;
-    margin-bottom: 20px;
-  }
-
-  .main-news {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 10px;
-    background-color: #d8e4bc;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin-bottom: 20px;
-  }
-
-  .main-news img {
-    max-width: 100%;
-    height: auto;
-    margin-right: 20px;
-  }
-
-  .main-news-text {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0 20px;
-  }
-
-  .main-news-text h2 {
-    margin-top: 0;
-  }
-
-  .main-news-text p {
-    /* Limit the width of the text*/
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  .main-news .read-more {
-    margin-top: 10px;
-    background-color: yellowgreen;
-    padding: 10px;
-    text-decoration: none;
-    display: inline-block;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-  }
-
-  .main-news .read-more:hover {
-    background-color: #4f7942;
-  }
-
-  .main-news .read-more:hover a {
-    color: #4f7942;
-  }
-
-
-  /* Style the grid container */
-
-  .news-container {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
-  }
-
-  .news-item {
-    box-sizing: border-box;
-    width: 100%;
-    padding: 10%;
-    margin-bottom: 20px;
-    border: 1px thin #4f7942;
-    background-color: yellowgreen;
-    display: grid;
-    gap: 20px;
-    color: gray;
-  }
-
-
-  .news-items img {
-    width: 100%;
-    max-height: 150px;
-    max-width: 100px;
-    border-radius: 8px;
-  }
-
-  .news-container a:hover {
-    background-color: whitesmoke;
-    padding: 10px;
-  }
-
-  /* Here we play with the footer */
-  article {
-    margin: 0 auto;
-    text-align: center;
-    background-color: #d8e4bc;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  .article ol,
-  article ul {
-    list-style-type: none;
-    padding: 0;
-  }
-
-  .article img {
-    width: 10px;
-    height: auto;
-    margin-left: 5px;
-  }
-
-  footer {
-    display: flex;
-    justify-content: center;
-    padding: 5px;
-    background-color: #4f7942;
-    color: #fff;
-  }
-
-  /*media queries for responsiveness*/
-  @media (min-width: 600px) {
-    .news-container {
-      grid-template-columns: repeat(2, 1fr);
-    }
-  }
-
-  @media (min-width: 1200px) {
-    .news-container {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
+}
