--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,8 @@
 body{
   background-color: #c3edcc;
+  margin: 0;
+  padding: 0;
+  display: block;
 }
 
 *{
@@ -9,8 +12,13 @@ body{
 nav{
   display:flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-around;
   color: #f4a2a9;
+}
+
+#logo{
+  justify-items:flex-start;
 }
 
 #desktop-nav{
@@ -29,19 +37,18 @@ nav{
   background-color: #f4f2c3;
 }
 
-@media screen and (max-width: 500px){
+@media only screen and (max-width: 500px){
   ul{
     display:block;
   }
   #desktop-nav{
-    display:flex;
+    display:none;
   }
-  .big-news{
+
+  #mobile-nav{
     display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-content:center;
   }
+
 }
 
 @media (min-width: 501px) and (max-width: 768px) {
@@ -69,10 +76,11 @@ nav{
   margin: 20px 40px 20px 40px;
 }
 #big-news-img{
+  justify-items: center;
   max-width: 400px;
   padding: 0;
   box-shadow: 5px -5px 10px 4px #f4f2c3;
-  margin: 10px 30px 10px 30px;
+  margin-right: 30px;
 }
 
 p,h2{ 
@@ -91,6 +99,8 @@ ul{
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 20px;
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 li{
@@ -102,7 +112,7 @@ li{
   box-shadow: 5px -5px 10px 4px #f4f2c3;
 }
 
-.other-articles-img{
+.other-article-img{
   max-width: 250px;
   margin: 10px 10px 10px 10px;
 }
