--- a/code/style.css
+++ b/code/style.css
@@ -1,46 +1,68 @@
 * {
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  line-height: 0.3;
 }
 
 body {
-  min-height: 100vh;
+ min-height: 100vh;
  display: flex;
  flex-direction: column;
+ background-color:rgb(255, 255, 255);
 }
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
 
 header {
   position: sticky;
   top: 0;
   width: 100%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
+  align-self: center;
 }
 
 h1 {
-  color: black;
+  color: rgb(0, 0, 0);
   float: left;
+  margin-left: 18px;
+  font-family: 'sora', sans-serif;
+  font-weight: 100;
 }
+
+
+@media (max-width: 767px) {
+  h1 {
+    font-size: 25px;
+    margin-left: 14px;
+  }
+  }
+
 
 .header-container {
 display: flex;
 justify-content: space-between;
 align-items: center;
-margin: 2px 2px 2px 10px;
+margin: 0 260px;
 
 }
 
-@media (max-width: 767px) {
-.title h1 {
-  font-size: 0.99em;
+@media screen and (max-width: 767px) {
+  .header-container {
+  margin: 0; 
+  }
 }
-}
+
 
 .topnav {
   overflow: hidden;
 }
 .topnav a {
   float: inline-start;
-  color: grey;
+  color: rgb(94, 64, 64);
   text-align: left;
   padding: 10px;
   margin-right: 20px;
@@ -49,7 +71,7 @@ margin: 2px 2px 2px 10px;
 
 }
 .topnav a:hover {
-  background-color: rgb(140, 155, 139);
+  background-color: rgb(0, 0, 0);
   color: white;
   border-radius: 20px;
 
@@ -65,6 +87,7 @@ margin: 2px 2px 2px 10px;
   .topnav a.icon {
     float: right;
     display: block;
+    margin-right: 2px;
   }
 }
 
@@ -85,31 +108,47 @@ margin: 2px 2px 2px 10px;
 .news-front {
   display: flex;
   flex-direction: row;
+  height: 850px;
+  overflow: hidden;
+  justify-content:center;
+  margin-top: 30px;
 }
 
 @media (max-width: 767px) {
   .news-front {
   padding: 15px;
   flex-direction: column;
-  align-items: center;
+  align-self: center;
+  margin-top: 0;
+  height: auto;
+  max-height: 1500px;
 }
 }
 
 .slideshow-container {
-  width: 70%;
+  width: 50%;
+
 }
 
 .my-slides {
   display: none;
   width: 100%;
   height: auto;
-  max-height: 1000px;
+  /*max-height: 750px;*/
+
+}
+
+
+@media screen and (max-width: 767px) {
+  #last-image {display: none;
+  }
 }
 
 @media screen and (max-width: 767px) {
   .slideshow-container {
     width: 100%;
     max-width: 100%;
+    margin-left: 0;
   }
 }
 
@@ -123,81 +162,117 @@ margin: 2px 2px 2px 10px;
   to {opacity: 1}
 }
 
-.slide-text {
+.slide-text-column {
   border-left: 3px solid;
-  width: 30%;
+  width: 20%;
   margin-left: 10px;
-  padding: 0 20px 20px 20px;
+  padding: 0 20px;
 }
 
 @media screen and (max-width: 767px) {
-  .slide-text {
+  .slide-text-column {
     width: 100%;
     max-width: 100%;
-    margin-left: 0px;
-    border-bottom: 3px solid;
+    margin: 20px 10px 0 0;
+    border: 3px solid;;
+    padding-top: 20px;
   }
 }
 
 @media screen and (max-width: 767px) {
-.slide-text h2 {
+.slide-text h3 {
   font-size: 0.95em;
   margin-right: 20px;
 
 }
 }
 
-@media screen and (max-width: 767px) {
-  .slide-text h2 span {
-    background-color:rgba(84, 119, 90, 0.486); 
-    padding: 3px;
-  
-  
-  }
-  }
-
-.categories {
-  width: 70%;
-  align-self: center;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding: 15px 60px;
-  margin: 40px 100px;
-}
-
-.category-box {
-  width: 130px;
-  margin: 20px;
-  padding: 20px;
-  border: 1px solid;
-  border-radius: 25%;
+.slide-text h3 span {
+  background-color:rgb(185, 93, 81);
+  padding: 4px 6px;
+  font-size: 0.95em;
 }
 
 .headlines {
-  align-self: center;
+ border-bottom: 1px solid;
+ margin: 30px 0;
 }
 
+.headlines h3 span {
+  background-color: black;
+  color: white;
+  padding: 2px;
+  margin-right: 1px;
+}
+
+.headlines h3 {
+  line-height: 1.7;
+}
+
+.headlines p {
+  line-height: 1.3;
+}
+
+#last {
+  border-bottom: 0;
+}
+
+@media screen and (max-width: 767px) {
+.headlines {
+font-size: 0.7em;
+}
+}
+
+@media screen and (max-width: 767px) {
+  #second-to-last {
+    border-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #last {display: none;
+  }
+}
+
+.articles-archive {
+  align-self: center;
+  margin-top: 40px;
+}
+
+
+@media screen and (max-width: 767px) {
+ .articles-archive {
+  margin-top: 20px;
+  }
+}
 
 .row-articles {
   display: flex;
   flex-wrap: wrap;
-  margin: 20px 5px;
+  width: 70%;
+  align-self: center;
 }
+@media screen and (max-width: 767px) {
+  .row-articles {
+  width: 100%;
+  padding: 15px;
+  }
+}
+
 
 .img-column {
   flex: 25%;
   max-width: 25%;
   padding: 0 4px;
+  max-height: 1500px;
 }
 .img-column img {
-  margin-top: 8px;
   vertical-align: middle;
-  
+  object-fit: cover;
 }
 
 .img-column img:hover {
- opacity: 0.8;
+ opacity: 0.7;
 
 
 }
@@ -206,46 +281,99 @@ margin: 2px 2px 2px 10px;
   .img-column {
     flex: 50%;
     max-width: 50%;
+    font-size: 0.8em;
+    font-weight:100;
   }
 }
 
-/*
-@media screen and (max-width: 600px) {
-  .img-column {
-    flex: 100%;
-    max-width: 100%;
-  }
+.article-text {
+  background-color:rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  padding: 10px;
+  margin-bottom: 5px;
 }
-*/
+
+
+
+.categories {
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 40px 100px;
+}
+
+@media screen and (max-width: 767px){
+  .categories {
+  margin: 20px;
+  align-self: center;
+  align-items: center;
+  }
+  }
+
+.category-column {
+  display: flex;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 767px){
+  .category-column {
+ flex-direction: column;
+
+  }
+  }
+
+
+.category-box {
+  width: 200px;
+  margin: 5px;
+  padding: 10px;
+  text-align: center;
+}
+
+.category-box a {
+background-color: rgb(0, 0, 0);
+    color: white;
+    border-radius: 20px;
+    padding: 10px 20px;
+
+}
+
+@media screen and (max-width: 767px){
+  .category-box a {
+ font-size: 0.7em;
+  }
+  }
+
+  .category-box a:hover {
+    background-color: rgb(79, 90, 78);
+    color: white;
+    border-radius: 20px;
+    padding: 10px 20px;
+  }
+  
+
 
 .video-section {
-  display: grid; 
-  margin-top: 50px;
-  grid-template-columns: 20% 20% 20% 20% 20%;
-  grid-template-rows: 20% 20% 20% 20% 20%;
-  height: 2000px;
-  width: 100vh;
-  gap: 30px;
-}
-
-@media screen and (max-width: 767px) {
-  .video-section {
-    display: flex;
-    flex-direction: column;
-    flex: 100%;
-    max-width: 100%;
-    padding: 15px;
-  }
-}
-
-
-.video-text-1 {
-  background-color: grey;
-  grid-column: 2 / 5;
+    max-width: 1200px;
+    margin: 40px auto;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: repeat(2, 1fr);
+   
 }
 
 .instruction-video {
-  grid-column: 5 / 6;
+ 
+}
+
+.video-text {
+  
+}
+
+.video-text h2 span {
+  background-color:rgb(185, 93, 81);
+  padding: 4px 6px;
 }
 
 @media screen and (max-width: 767px) {
@@ -253,9 +381,3 @@ margin: 2px 2px 2px 10px;
   max-width: fit-content;
   }
 }
-
-.video-text {
-  border: 1px solid;
-  grid-column: 2/ 5;
-}
-
