--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,145 @@
-html {
-  background: #0025ff;
-  color: #fff;
+
+.body {
+  background-color: darkred;
 }
+
+
+.page-top-parent {
+
+  border: 10px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  background-color: whitesmoke;
+
+}
+
+@media (min-width: 320px ) and (max-width: 520px){
+  .page-top-parent {
+    border: 0px;
+    padding: 10px;
+    display: block;
+    
+  }
+}
+
+.page-top img {
+  width: 100px;
+  height: 110px;
+  padding: 10px;
+  object-fit: cover;
+  border-radius: 20px;
+
+}
+
+.title {
+    font-size: 50px;
+    padding: 0px;
+    width: 100%;
+
+  }
+
+  @media (min-width: 1026px) {
+    .title {
+      font-size: 80px;
+    }
+  }
+
+.navbar {
+  background-color: whitesmoke;
+  padding: 12px;
+  display: column;
+  align-items: center;
+  justify-content: space-around;
+ 
+}
+
+
+.navbar-button {
+  background-color: black;
+  border-radius: 10px;
+  padding: 5px;
+  
+}
+
+.a {
+  text-decoration: none;
+}
+
+
+.big-news-article {
+  margin-top: 10px;
+  padding: 20px;
+}
+
+.big-news {
+  width: 100%;
+}
+
+.h2-text {
+  color: black;
+  margin-top: 2px;
+  font-family: Helvetica,Arial,"Nimbus Sans L",sans-serif;
+  
+}
+
+.grid-parent {
+
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 3px;
+
+}
+
+@media (min-width: 668px ) and (max-width: 1025px) {
+  .grid-parent {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1026px) {
+  .grid-parent {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+.grid-item {
+  background: pink;
+  padding: 10px;
+}
+
+.h3-text {
+  margin-top: 3px;
+  color: black;
+  font-family: Publik,Helvetica,Arial,"Nimbus Sans L","Bitstream Vera Sans",sans-serif;
+  font-weight: 400;
+}
+
+.image-text-grid {
+  color: black;
+  font-family: Publik,Helvetica,Arial,"Nimbus Sans L","Bitstream Vera Sans",sans-serif;
+  font-weight: 400;
+}
+
+.small-box-img {
+  width: 100%;
+  height: 420px;
+  object-fit: cover;
+}
+
+@media (min-width: 668px ) and (max-width: 1025px) {
+
+  .small-box-img {
+    height: 350px;
+  }
+  
+}
+
+@media (min-width: 1026px) {
+  .small-box-img {
+    height: 350px;
+  }
+}
+
