--- a/code/style.css
+++ b/code/style.css
@@ -27,7 +27,7 @@ header {
 h1 {
   color: rgb(0, 0, 0);
   float: left;
-  margin-left: 18px;
+  /* margin-left: 18px; */
   font-family: 'sora', sans-serif;
   font-weight: 100;
 }
@@ -45,7 +45,7 @@ h1 {
 display: flex;
 justify-content: space-between;
 align-items: center;
-margin: 0 260px;
+margin: 0 280px;
 
 }
 
@@ -64,7 +64,7 @@ margin: 0 260px;
   color: rgb(94, 64, 64);
   text-align: left;
   padding: 10px;
-  margin-right: 20px;
+  /* margin-right: 20px; */
   text-decoration: none;
   font-size: 100;
 
@@ -133,15 +133,15 @@ margin: 0 260px;
   display: none;
   width: 100%;
   height: auto;
-  /*max-height: 750px;*/
 
 }
 
-
-@media screen and (max-width: 767px) {
-  #last-image {display: none;
+@media (max-width:767px) {
+  .my-slides {
+    font-size: 0.8em;
   }
 }
+
 
 @media screen and (max-width: 767px) {
   .slideshow-container {
@@ -175,6 +175,7 @@ margin: 0 260px;
     margin: 20px 10px 0 0;
     border: 3px solid;;
     padding-top: 20px;
+    font-size: 0.9em;
   }
 }
 
@@ -250,6 +251,7 @@ font-size: 0.7em;
   flex-wrap: wrap;
   width: 70%;
   align-self: center;
+  
 }
 @media screen and (max-width: 767px) {
   .row-articles {
@@ -264,6 +266,7 @@ font-size: 0.7em;
   max-width: 25%;
   padding: 0 4px;
   max-height: 1500px;
+  
 }
 .img-column img {
   vertical-align: middle;
@@ -286,7 +289,7 @@ font-size: 0.7em;
 }
 
 .article-text {
-  background-color:rgb(255, 255, 255);
+  
   color: rgb(0, 0, 0);
   padding: 10px;
   margin-bottom: 5px;
@@ -354,29 +357,48 @@ background-color: rgb(0, 0, 0);
 
 
 .video-section {
-    max-width: 1200px;
-    margin: 40px auto;
+    height: 1500px;
+    margin: 10px 280px;
     display: grid;
     gap: 20px;
-    grid-template-columns: repeat(2, 1fr);
-   
-}
+    grid-template-columns: 2fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;  
+  }
+
+@media screen and (max-width: 767px) {
+  .video-section {
+    height: 700px;
+    margin: 10px;
+    gap: 10px;
+    font-size: 0.75em;
+  }
+}  
 
 .instruction-video {
- 
+  background-color: pink;
 }
+
+.instruction-video iframe {
+  height: 100%;
+  width: 100%;
+}
+
 
 .video-text {
-  
-}
-
-.video-text h2 span {
-  background-color:rgb(185, 93, 81);
-  padding: 4px 6px;
+ border: 1px solid;
+  padding: 20px;
 }
 
 @media screen and (max-width: 767px) {
-  .instruction-video {
-  max-width: fit-content;
+  .video-text {
+    padding: 10px;
   }
+}
+.footer {
+background-color:rgb(185, 93, 81);
+position: sticky;
+bottom: 0;
+width: 100%;
+height: 150px;
+margin-top: 20px;
 }
