--- a/code/style.css
+++ b/code/style.css
@@ -367,8 +367,9 @@ background-color: rgb(0, 0, 0);
 
 @media screen and (max-width: 767px) {
   .video-section {
-    height: 600px;
-    margin: 10px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr;  
+    margin: 20px;
     gap: 10px;
     font-size: 0.75em;
   }
