--- a/code/style.css
+++ b/code/style.css
@@ -367,6 +367,7 @@ background-color: rgb(0, 0, 0);
 
 @media screen and (max-width: 767px) {
   .video-section {
+    height: 1000px;
     grid-template-columns: 1fr;
     grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr;  
     margin: 20px;
