--- a/code/style.css
+++ b/code/style.css
@@ -323,7 +323,7 @@ font-size: 0.7em;
   flex-direction: row;
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 900px){
   .category-column {
  flex-direction: column;
 
@@ -388,7 +388,7 @@ background-color: rgb(0, 0, 0);
   height: 100%;
   width: 100%;
 
-
+}
 
 .video-text {
  border: 1px solid;
