--- a/code/style.css
+++ b/code/style.css
@@ -326,6 +326,7 @@ font-size: 0.7em;
 @media screen and (max-width: 900px){
   .category-column {
  flex-direction: column;
+ flex-wrap: wrap;
 
   }
   }
