--- a/code/style.css
+++ b/code/style.css
@@ -326,8 +326,6 @@ font-size: 0.7em;
 @media screen and (max-width: 900px){
   .category-column {
  flex-direction: column;
- flex-wrap: wrap;
-
   }
   }
 
@@ -380,6 +378,7 @@ background-color: rgb(0, 0, 0);
     gap: 10px;
     font-size: 0.75em;
   }
+}
 
 .instruction-video {
   background-color: pink;
@@ -401,6 +400,7 @@ background-color: rgb(0, 0, 0);
     padding: 10px;
   }
 }
+
 .footer {
 background-color:rgb(185, 93, 81);
 position: sticky;
