--- a/code/style.css
+++ b/code/style.css
@@ -380,6 +380,18 @@ background-color: rgb(0, 0, 0);
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  .video-section {
+    height: 1200px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr;  
+    margin: 20px;
+    gap: 10px;
+    font-size: 0.75em;
+  }
+}
+}
+
 .instruction-video {
   background-color: pink;
 }
