--- a/code/style.css
+++ b/code/style.css
@@ -330,6 +330,13 @@ font-size: 0.7em;
   }
 
 
+  @media only screen and (max-width: 1024px) {
+    .category-column {
+    flex-direction: column;
+    }
+  }
+
+
 .category-box {
   width: 200px;
   margin: 5px;
@@ -390,7 +397,7 @@ background-color: rgb(0, 0, 0);
     font-size: 0.75em;
   }
 }
-}
+
 
 .instruction-video {
   background-color: pink;
