--- a/code/style.css
+++ b/code/style.css
@@ -391,7 +391,7 @@ background-color: rgb(0, 0, 0);
   .video-section {
     height: 1200px;
     grid-template-columns: 1fr;
-    grid-template-rows: 2fr 1fr 2fr 1fr 2fr 1fr;  
+    grid-template-rows: 1fr 1fr 1fr;
     margin: 20px;
     gap: 10px;
     font-size: 0.75em;
