--- a/code/style.css
+++ b/code/style.css
@@ -390,7 +390,7 @@ background-color: rgb(0, 0, 0);
 @media only screen and (max-width: 1024px) {
   .video-section {
     height: 1200px;
-    grid-template-columns: 1fr;
+    grid-template-columns: 2fr, 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     margin: 20px;
     gap: 10px;
