--- a/code/style.css
+++ b/code/style.css
@@ -131,7 +131,7 @@ margin: 0 30%;
 
 .slideshow-container {
   width: 50%;
-
+  overflow: scroll;
 }
 
 .my-slides {
@@ -164,6 +164,33 @@ margin: 0 30%;
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+.extra-news {
+  width: 100%;
+}
+
+.extra-news img {
+ width: 100%;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffffff; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #ffffff; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff; 
 }
 
 .slide-text-column {
