Fixed card images not sizing correctly

--- a/code/cards.css
+++ b/code/cards.css
@@ -41,7 +41,11 @@
     }
 
     .card-image{
-        width: 12rem;
+        flex-basis: 33%;
         object-fit: cover;
+    }
+
+    .card-content {
+        flex-basis: 66%;
     }
 }
