--- a/code/style.css
+++ b/code/style.css
@@ -48,6 +48,13 @@ nav{
   #mobile-nav{
     display: flex;
   }
+  .big-news{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: center;
+    margin: 10px 20px 10px 20px;
+  }
 
 }
 
