--- a/code/cards.css
+++ b/code/cards.css
@@ -1,8 +1,9 @@
 .cards{
+    width: 80%;
     margin: 0 auto;
     padding: 2rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 20px;
     font-family: sans-serif;
 }
