--- a/code/cards.css
+++ b/code/cards.css
@@ -41,11 +41,11 @@
     }
 
     .card-image{
-        width: 25%;
+        flex: 25%;
         object-fit: cover;
     }
 
     .card-content{
-        flex-basis: 75%;
+        flex: 75%;
     }
 }
