--- a/code/cards.css
+++ b/code/cards.css
@@ -15,6 +15,7 @@
 
 .card-image {
     width: 100%;
+    height: 300px;
     display: block;
     object-fit: cover;
 }
@@ -41,6 +42,7 @@
     }
 
     .card-image{
+        height: auto;
         flex: 25%;
         object-fit: cover;
     }
