--- a/code/style.css
+++ b/code/style.css
@@ -338,12 +338,13 @@ font-size: 0.7em;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  margin: 40px 100px;
+  margin: 40px 15%;
+  width: 70%;
 }
+
 
 @media screen and (max-width: 767px){
   .categories {
-  margin: 20px;
   align-self: center;
   align-items: center;
   }
@@ -420,7 +421,7 @@ background-color: rgb(0, 0, 0);
 
 @media only screen and (max-width: 1024px) {
   .video-section {
-    height: 1200px;
+    height: 1000px;
     margin: 10px 15%;
     grid-template-columns: 2fr, 1fr;
     grid-template-rows: 1fr 1fr 1fr;
