--- a/code/style.css
+++ b/code/style.css
@@ -340,6 +340,8 @@ font-size: 0.7em;
   justify-content: space-around;
   margin: 40px 15%;
   width: 70%;
+  background-color: rgb(185, 93, 81);
+  padding: 20px;
 }
 
 
@@ -374,6 +376,7 @@ font-size: 0.7em;
   margin: 5px;
   padding: 10px;
   text-align: center;
+ 
 }
 
 .category-box a {
@@ -432,7 +435,7 @@ background-color: rgb(0, 0, 0);
 
 
 .instruction-video {
-  background-color: pink;
+  background-color: rgb(185, 93, 81);
 }
 
 .instruction-video iframe {
@@ -448,15 +451,75 @@ background-color: rgb(0, 0, 0);
 
 @media screen and (max-width: 767px) {
   .video-text {
-    padding: 10px;
+    padding: 20px;
+    overflow: hidden;
   }
 }
 
-.footer {
-background-color:rgb(185, 93, 81);
-position: sticky;
-bottom: 0;
-width: 100%;
-height: 150px;
-margin-top: 20px;
+.button-1 {
+  align-items: center;
+  background-color: #ffffff;
+  border: 2px solid #111;
+  border-radius: 20px;
+  box-sizing: border-box;
+  color: #111;
+  cursor: pointer;
+  display: flex;
+  font-size: 16px;
+  height: 48px;
+  justify-content: center;
+  line-height: 24px;
+  max-width: 100%;
+  padding: 0 25px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
 }
+
+.button-1:after {
+  background-color: #111;
+  border-radius: 20px;
+  content: "";
+  display: block;
+  height: 48px;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  top: -2px;
+  transform: translate(8px, 8px);
+  transition: transform .2s ease-out;
+  z-index: -1;
+}
+
+.button-1:hover:after {
+  transform: translate(0, 0);
+}
+
+.button-1:active {
+  background-color: #ffdeda;
+  outline: 0;
+}
+
+.button-1:hover {
+  outline: 0;
+}
+
+@media (min-width: 768px) {
+  .button-1 {
+    padding: 0 40px;
+  }
+}
+
+
+.footer {
+  background-color:rgb(185, 93, 81);
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  height: 150px;
+  margin-top: 20px;
+  }
+  
