--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,315 @@
-html {
-  background: #0025ff;
-  color: #fff;
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto:wght@700&display=swap');
+
+
+* {
+  font-family: 'Lato', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
 }
+
+body {
+  background-color: rgb(240, 240, 239);
+}
+
+.rocket-logo {
+  color: #754DAD;
+  font-size: 30px;
+  padding-right: 680px;
+  font-weight: bolder;
+  display: flex;
+  border-color: #754DAD;
+}
+
+.logo-image {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 20px;
+}
+
+.logo-text {
+  color:#754DAD;
+  font-size: 1.5rem;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.hamburger-menu {
+  padding-right: 1rem;
+}
+
+.desktop-menu {
+  display: none;
+}
+
+.desktop-menu a:hover {
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+}
+
+.hero-container {
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);;
+  margin: 1.5rem;
+}
+
+.selected-article {
+  text-align:left;
+  font-size: 1rem;
+  padding: 20px 20px 0px;
+  margin: 0;
+}
+
+.hero-image {
+  width: 100%;
+  padding: 20px;
+}
+
+.hero-article {
+  margin: 1rem;
+}
+
+h1 {
+  color: black;
+  font-size: 30px;
+  margin: 0;
+}
+
+.read-more-button {
+  color: #f9f9f9;
+  background-color: #754DAD;
+  border: none;
+  padding: 15px 35px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  margin: 20px 0px;
+}
+
+.read-more-button:hover {
+  background-color: #a395b8;
+}
+
+.news-section {
+  display: grid;
+  grid-template-columns: ;
+  gap: 20px;
+  margin: 1.5rem;
+}
+
+.article-container, p {
+  padding: 1rem 0 1rem 0;
+}
+
+.article-pictures {
+  padding-bottom: 1rem;
+}
+
+.link-to-article {
+  text-decoration: none;
+  color: black;
+}
+
+.article-one {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-two {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-three {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-four {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-five {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-six {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-seven {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-eight {
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.1);
+  height: 100%;
+}
+
+.article-pictures {
+  width: 100%;
+}
+
+.newsletter {
+  display: block;
+  text-align: center;
+  font-weight: 900;
+  font-size: 25px;
+  background-color: rgb(255, 255, 255);
+  padding: 3rem;
+  margin: 0;
+}
+
+.sign-up-text {
+  padding: 1rem;
+}
+
+.small-text {
+  font-size: 14px;
+  font-weight: 100;
+  padding: 0;
+}
+
+.subscribe-button {
+  color: #f9f9f9;
+  background-color: #754DAD;
+  border: none;
+  padding: 15px 35px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  margin: 30px 0px;
+}
+
+footer {
+
+  font-size: 14px;
+  text-align: center;
+  margin: 4rem;
+}
+
+.all-rights-reserved, ul {
+  padding: 1rem;
+  margin-top: 2rem;
+}
+
+.link-to-article :hover {
+  color: #754DAD;
+}
+
+.subscribe-button:hover {
+  background-color: #a395b8;
+}
+
+.icons a {
+  text-decoration: none;
+  color: black;
+  font-size: 12px;
+}
+
+@media (min-width: 667px) and (max-width: 1024px) {
+  .news-section {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    gap: 20px;
+  }
+
+  .hero-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .desktop-menu, .menu-links  {
+  padding: 1rem;
+  text-decoration: none;
+  color: #754DAD;
+  font-weight: bolder;
+  display: flex;
+}
+
+.desktop-menu a:hover {
+  color: #000000;
+}
+
+  .hamburger-menu {
+    display: none;
+  }
+
+  footer {
+    align-items: baseline;
+  }
+
+  .subscribe-button:hover {
+    background-color: #a395b8;
+  }
+
+}
+    
+
+@media (min-width: 1025px) {
+  .news-section {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
+  }
+
+  .hero-container {
+    display: flex;
+    align-items: center;
+  }
+
+  .article-container {
+    height: 100%;
+  }
+
+  .desktop-menu, .menu-links {
+    padding: 1rem;
+    text-decoration: none;
+    color: #754DAD;
+    font-weight: bolder;
+    display: flex;
+  }
+  
+  .desktop-menu a:hover {
+    color: #000000;
+  }
+    .hamburger-menu {
+      display: none;
+    }
+
+    .subscribe-button:hover {
+      background-color: #a395b8;
+    }
+  }
+  
