Cleaned up the code, added some comments

--- a/code/style.css
+++ b/code/style.css
@@ -10,7 +10,7 @@ h2, h3 {
 }
 p {
   font-family: 'Montserrat', sans-serif;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 /* header styling */
@@ -83,13 +83,14 @@ h2 {
   font-size: 10px;
 }
 button {
-  margin-bottom: 20px;
-  padding: 5px;
   font-family: 'Montserrat', sans-serif;
   background-color: #aee1b5;
   border-radius: 50%;
   border-style: double;
   width: 95px;
+  margin-bottom: 20px;
+  padding: 5px;
+  cursor: pointer;
 }
 
 /* small-news styling */
@@ -97,7 +98,7 @@ button {
   grid-column: span 4;
   width: 90%;
   border: 2px dotted;
-  margin: 0px 10px 20px 10px;
+  margin: 0 10px 20px 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -113,18 +114,28 @@ button {
 }
 .small-news img {
   width: 90%;
-  margin: 10px 0px 0px 0px;
+  margin-top: 10px;
 }
-.button {
+.button-div {
   display: flex;
   justify-content: center;
 }
 
 /* media queries start */
+
+/* small mobile screens */
+@media (max-width: 360px) {
+  header {
+    grid-template-columns: 2fr 1fr 4fr;
+  }
+  h1 {
+    display: none;
+  }
+}
+/* tablets and desktops */
 @media (min-width: 667px) {
   header {
     grid-column: span 4;
-    display: grid;
     grid-template-columns: 1fr 5fr 40%;
     height: 90px;
   }
@@ -134,20 +145,19 @@ button {
   }
   .main-menu {
     margin-top: 20px;
-    margin-left: 20px;
     display: flex;
     justify-content: flex-end;
   }
   .main-menu a{
     font-size: 16px;
   }
-  .big-news {
-    display: inline-block;
-  }
   h2 {
-    margin: 0px;
+    margin: 0;
     padding-top: 20px;
     font-size: 36px;
+  }
+  .big-news, .small-news {
+    display: inline-block;
   }
   .big-news .photo-display {
     float: left;
@@ -163,34 +173,21 @@ button {
   .small-news .caption {
     padding-left: 10px;
   }
-  .small-news {
-    display: inline-block;
-  }
 }
-@media (max-width: 360px) {
-  header {
-    grid-template-columns: 2fr 1fr 4fr;
-  }
-  h1 {
-    display: none;
-  }
-}
+/* only tablets */
 @media (min-width: 667px) and (max-width: 1024px) {
   .small-news {
     grid-column: span 2;
   }
 }
+/* only desktops */
 @media (min-width: 1025px) {
   h1 {
     font-size: 48px;
-    display: block;
     padding: 0;
   }
   .site-subtitle {
     display: block;
-  }
-  .big-news img {
-    width: 300px;
   }
   .small-news {
     grid-column: span 1;
